Versão 1.1 em desenvolvimento
Refatoração do código, adição de comentários, módulo middleware sendo implementado e parte das validações feitas (ainda sem o uso do express-validator). Ainda sem swagger, JWT e implementação do cadastro de cursos no DB.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mvc",
     "mongodb"
   ],
-  "author": "Leon Fagundes, Erick Oliveira, Matheus Garibaldi",
+  "author": "Leon Fagundes",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
