--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "api/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node ./api/app.js",
     "dev": "nodemon ./api/app.js"
   },
@@ -30,6 +30,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
